--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-post-processing={path="post-processing"}
-bevy = "0.8.0"
+bevy = { version="0.8.0", default-features=false, features=["bevy_ui", "bevy_text", "bevy_winit", "filesystem_watcher"] }
+post-processing={ path="post-processing" }
+bevy_rapier2d = "0.16.1"
+
+[profile.dev.package."*"]
+opt-level = 3
+
+[profile.dev]
+opt-level = 1
