--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ bevy = { version="0.8.0", default-features=false, features=["bevy_ui", "bevy_tex
 post-processing={ path="post-processing" }
 bevy_rapier2d = "0.16.1"
 
+[target.wasm32-unknown-unknown]
+runner = "wasm-server-runner"
+
 [profile.dev.package."*"]
 opt-level = 3
 
