--- a/post-processing/Cargo.toml
+++ b/post-processing/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 bevy = { version="0.8.0", default-features=false, features=["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_sprite", "bevy_ui"] }
 wgpu = "0.13.1"
 bytemuck = "1.12.0"
+bitflags = "1.3.2"
