--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bevy = { version="0.8.0", default-features=false, features=["bevy_ui", "bevy_text", "bevy_winit", "png", "filesystem_watcher"] }
 post-processing={ path="post-processing" }
 bevy_rapier2d = "0.16.1"
+rapier2d = "0.14.0"
 bevy_kira_audio = "0.12.0"
 
 [target.wasm32-unknown-unknown]
